--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,3 +17,17 @@ jobs:
 
       - name: Build
         run: ./scripts/buildprod.sh
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+
+      - name: 'Deploy'
+        run: 'gcloud builds submit --tag europe-west8-docker.pkg.dev/notely-432109/notely-ar-repo/notely:latest .'
