--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: 'Deploy'
         run: 'gcloud builds submit --tag europe-west8-docker.pkg.dev/notely-432109/notely-ar-repo/notely:latest .'
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image europe-west8-docker.pkg.dev/notely-432109/notely-ar-repo/notely:latest --region eu-central1 --allow-unauthenticated --project notely-432109 --max-instances=4
