--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,6 +6,10 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -29,8 +33,14 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
 
-      - name: 'Deploy'
+      - name: 'Build and push Docker image'
         run: 'gcloud builds submit --tag europe-west8-docker.pkg.dev/notely-432109/notely-ar-repo/notely:latest .'
+
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
+      - name: Run migrations
+        run: ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image europe-west8-docker.pkg.dev/notely-432109/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-432109 --max-instances=4
